--- a/index.html
+++ b/index.html
@@ -11,4 +11,15 @@
         <div id="app"></div>
         <script type="module" src="/src/main.ts"></script>
     </body>
+
+    <script>
+        window.WebFontConfig = {
+            google: {
+                families: ["Atkinson Hyperlegible"],
+            },
+            active() {
+                init();
+            },
+        };
+    </script>
 </html>
