--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
         <meta charset="UTF-8" />
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="" />
+        <meta
+            name="keywords"
+            content="memory game, puzzle game, brain training, online game, matching game"
+        />
+        <meta
+            name="description"
+            content="Enjoy a fun and challenging memory game developed by Chiemeka Reynolds. Exercise your brain, enhance your concentration, and have a great time with this interactive puzzle. Play now!"
+        />
         <title>Memory Game</title>
     </head>
     <body>
