--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
         />
         <title>Memory Game</title>
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script
+        async
+        src="https://www.googletagmanager.com/gtag/js?id=G-9XBPFB2605"
+    ></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+
+        gtag("config", "G-9XBPFB2605");
+    </script>
     <body>
         <div id="app"></div>
         <script type="module" src="/src/main.ts"></script>
